--- a/output/archives.html
+++ b/output/archives.html
@@ -21,9 +21,21 @@
 
 <dl>
     <dt>Fri 03 December 2010</dt>
+    <dd><a href="/my-eighth-review.html">My Eighth Review</a></dd>
+    <dt>Fri 03 December 2010</dt>
+    <dd><a href="/my-fifth-review.html">My Fifth Review</a></dd>
+    <dt>Fri 03 December 2010</dt>
     <dd><a href="/my-first-review.html">My First Review</a></dd>
     <dt>Fri 03 December 2010</dt>
+    <dd><a href="/my-fourth-review.html">My Fourth Review</a></dd>
+    <dt>Fri 03 December 2010</dt>
     <dd><a href="/my-second-review.html">My Second Review</a></dd>
+    <dt>Fri 03 December 2010</dt>
+    <dd><a href="/my-seventh-review.html">My Seventh Review</a></dd>
+    <dt>Fri 03 December 2010</dt>
+    <dd><a href="/my-sixth-review.html">My Sixth Review</a></dd>
+    <dt>Fri 03 December 2010</dt>
+    <dd><a href="/my-third-review.html">My Third Review</a></dd>
 </dl>
         <footer id="contentinfo" class="body social-links">
           <div class="social-link">
